# deep-researcher

./: pyproject.toml
src/: config.py  prompts.py
src/agents/: agent.py
src/agents/graph/: builder.py
src/agents/nodes/: initialize.py
src/agents/processors/: __init__.py  content_processor.py
src/agents/utils/: agent_utils.py
src/graph/: builder.py
src/processors/: content_processor.py
src/research/: researcher.py
