[tool.poetry]
name = "clone of deep-research"
version = "0.1.0"
description = ""
authors = ["nam pham <contact.nampham.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
langchain = "^0.3.19"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
pydantic = "^2.10.6"
rich = "^13.9.4"
playwright = "^1.50.0"
langgraph = "^0.3.2"
langchain-together = "^0.3.0"
fake-useragent = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
